fixed the input styling for darkmode so fields were clearly visible

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -96,5 +96,5 @@ button{
 }
 
 button:hover{
-    box-shadow: 2px 2px #326789;
+    box-shadow: 3px 3px #326789;
 }
