--- a/src/components/theme/theme.css
+++ b/src/components/theme/theme.css
@@ -25,4 +25,5 @@
     background-color: #999;
     position: absolute;
     cursor: pointer;
+    transition: .4s;
 }
